# goit-pythonweb-hw-012

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: conf.py  index.rst
migrations/versions/: 4141e30179c0_init.py  5ef5502d4230_add_user_role.py
src/api/: admin_dashboard.py  auth.py
src/database/: cache.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  email.py  users.py
src/services/templates/: reset_password.html
templates/: reset_password_form.html
tests/: conftest.py  test_contacts_repository_unit.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_users_repository_unit.py
